# github-backup

./: .env.example  Dockerfile  LICENSE  README.md  backup.sh  pyproject.toml  requirements.txt
.github/workflows/: publish-ghcr.yml
github_backup/: backup.py
