[tool.poetry]
name = "github-backup"
version = "0.1.0"
description = "A simple tool to backup your github repositories."
authors = ["Soaibuzzaman <soaibuzzaman@uni-weimar.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
